<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#fdfefa">

	<Button  android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_inter"
        android:id="@+id/interstitial"
        />
	 <Button  android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_pause"
        android:id="@+id/pause"
        />
	<Button  android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_switch"
        android:id="@+id/viewswitch"
        />
</LinearLayout>